# geodrop

./: .gitignore  .vercelignore  AUDIT.md  README.md  codama.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  tsconfig.json
anchor/: Anchor.toml  README.md
anchor/programs/vault/: Cargo.toml
anchor/programs/vault/src/: lib.rs  tests.rs
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/api/claim/: route.ts
app/beta/: page.tsx
app/campaign/create/: page.tsx
app/components/: lifi-funding-widget.tsx  scroll-reveal.tsx  vault-card.tsx
app/components/campaign/: campaign-card.tsx  map-picker.tsx  step-parameters.tsx  step-type.tsx
app/dashboard/: page.tsx
app/lib/: errors.ts
app/lib/wallet/: standard.ts
app/media/: page.tsx
app/waitlist/: page.tsx
apps/mobile/: App.tsx  README.md  app.config.ts  app.json  eas.json  metro.config.js  package.json  polyfill.ts
apps/mobile/components/: Map.tsx  Map.web.tsx  WalletProvider.android.tsx  WalletProvider.tsx
apps/mobile/hooks/: useClaimBounty.android.ts  useClaimBounty.ts  useDrops.ts  useLocation.ts
apps/pwa/: .gitignore  README.md  geodrop-client.tgz  next.config.ts  package-lock.json  package.json  vercel.json
apps/pwa/app/: globals.css  layout.tsx  page.tsx
apps/pwa/public/: manifest.webmanifest  sw.js
video/: package-lock.json  package.json
video/src/: Main.tsx  Root.tsx  style.css
video/src/components/: AudioStack.tsx  Captions.tsx  GridBackground.tsx
video/src/scenes/: Scene1.tsx  Scene2.tsx  Scene3.tsx  (+3 more)
(+11 files in other folders)
